snapshots/care/data4life/hc-util-sdk-kmp/error/1.14.0-SNAPSHOT/error-1.14.0-20220831.180107-1.jar.sha512
f926f2441108bf65f97eb897815118197cea6958cbc270daada0133e15e9ec23edb94480055ea390ee56321ddcfb86ed9b0cf8f42b251566e5104197b211e296